Use special internal event for marking the end of a curve

Previously, creation of a SetValueCurve event would automatically
insert a SetValue event at the end of the SetValueCurve to establish
an end value for the curve so that following events would start from
the end of the curve instead of the beginning.

However, this causes incorrect errors about overlapping SetValueCurve
events if a SetValueCurve is scheduled to start at the very end of a
preceeding SetValueCurve.  The implicitly inserted SetValue would
overlap the new SetValueCurve.  Using an internal event avoids this
conflict, but still establishes the appropriate event needed to manage
the timeline.

Bug: 768740
Test:
Change-Id: Ibc798e0427bb49c3e163f5a7535f26c49b166303